force-app/main/default/objects/AppErrorArchived__b/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Original Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>