force-app/main/default/objects/AppErrorArchived__b/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>App Errors Archived</relationshipLabel>
    <relationshipName>AppErrorsArchived</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>