force-app/main/default/objects/AppErrorArchived__b/fields/lkp_License__c.field-meta.xml
<CustomField>
    <fullName>lkp_License__c</fullName>
    <label>License</label>
    <referenceTo>sfLma__License__c</referenceTo>
    <relationshipLabel>App Errors Archived</relationshipLabel>
    <relationshipName>AppErrorsArchived</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>