force-app/main/default/objects/AppErrorArchived__b/fields/txl_FullMailBody__c.field-meta.xml
<CustomField>
    <fullName>txl_FullMailBody__c</fullName>
    <label>Full Mail Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>